--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-body {
+html body {
     background-color: #e7e7e7;
-    font-family: "Roboto", sans-serif;
+    font-family: "Roboto", sans-serif !important;
     font-weight: 300;
     font-style: normal;
 }
@@ -13,28 +13,15 @@ body {
 }
 
 .banner {
-    height: 45rem;
     width: 100%;
-}
-
-.card {
-    height: 8rem;
-}
-
-.secao-personalizada {
-    height: 40rem;
-    align-items: center;
-}
-
-.card-personalizado {
-    height: 10rem;
-    width: 90%;
 }
 
 p {
     font-size: 12px;
 }
 
-.container-personalizado {
-    height: 20rem;
+.list-inline-item {
+    height: 3px;
+    width: 3px;
+    color: #310484;
 }
